# 11-lb

./: .gitignore  CMakeLists.txt  README.md  run.sh
cuda/: lbm_2D_liddrivencavity.cu
media/performance/: performance.txt  plot_performance.m
media/readmefiles/: specialcase.md
output/: parameters.txt
src/: Auxiliary.cpp  LBM.cpp  LBM.hpp  Lattice.cpp  Lattice.hpp  Masks.cpp  Node.cpp  Node.hpp  WindTunnelLBM.cpp  WindTunnelLBM.hpp  main.cpp  main2.cpp  py_instructions.txt  visualizer.py
src/2DLBM/: main.cpp  visualizer.py  visualizer_gif.py
src/2DLBM/include/: Auxiliary.hpp  LDRIVEN.hpp  Lattice.cpp  Masks.cpp  Masks.hpp  Node.cpp  Node.hpp
src/2DLBM/lib/: Auxiliary.cpp  Auxiliary.hpp  LDRIVEN.cpp  LDRIVEN.hpp  Lattice.cpp  Lattice.hpp  Masks.cpp  Node.cpp  Node.hpp
src/3DLBM/: 3DLBM.cpp  3DLBM.hpp  main.cpp
src/3DLBM/include/: 3DLBM.cpp
src/3DLBM/lib/: 3DLBM.cpp  3DLBM.hpp  VTK.cpp  VTK.hpp
src/3DLBM/visual_tool/: streamline.py  velocityprofile.py
src/cuda/: lbm_2D_liddrivencavity.cu  lbm_2D_liddrivencavity_colab.cu  lbm_cuda.ipynb
src/old/: Lattice.cpp  Obstacle.cpp  WindTunnelLBM.cpp  WindTunnelLBM.hpp  func.cpp  main2.cpp  step.cpp
